kubernetes/archive/deploy/bitwarden/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-svc
  namespace: bitwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: websocket
    port: 3012
    protocol: TCP
    targetPort: websocket
  selector:
    app.kubernetes.io/name: bitwarden
  type: ClusterIP
